[package]
name = "katex-gdef-v8"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Conashimi Momota <momota.ry2@gmail.com>"]
description = "Rust library for fast use of KaTeX via V8 engine."
repository = "https://github.com/momota1029/katex-v8"
keywords = ["latex", "katex", "math", "rendering"]
categories = ["rendering", "mathematics"]

[dependencies]
once_cell = "1.18.0"
deno_core = "0.341.0"
serde_json = "1.0.140"
serde = "1.0.219"
thiserror = "2.0.12"