[package]
name = "katex-gdef-v8"
version = "0.1.5"
edition = "2024"
license = "MIT"
authors = ["Conashimi Momota <momota.ry2@gmail.com>"]
description = "Rust library for fast use of KaTeX via V8 engine."
repository = "https://github.com/momota1029/katex-v8"
keywords = ["latex", "katex", "math", "rendering"]
categories = ["rendering", "mathematics"]

[dependencies]
html5gum = "0.7.0"
once_cell = "1.18.0"
deno_core = { version = "0.341.0", optional = true }
quickjs-rusty = { version = "0.8.0", optional = true }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"

[features]
default = ["v8"]
v8 = ["deno_core"]
qjs = ["quickjs-rusty"]
